# industry_production

./: README.md  pyproject.toml  requirements.txt
src/industrial_prod/: dashboard.py  download.py  plots.py
src/industrial_prod/notebooks/: notebook.py  notebook_data.py
